--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mongodb": "^4.8.1",
     "mongoose": "^6.5.2",
     "mongoose-dbref": "^0.0.4",
-    "run-rs": "^0.7.7"
+    "run-rs": "^0.7.7",
+    "socket.io": "^4.5.1"
   }
 }
