--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react": "^18.2.0",
     "react-async": "^10.0.1",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
     "react-intersection-observer": "^9.4.0",
     "react-native-virtual-keyboard": "^1.2.1",
     "react-phone-number-input": "^3.2.3",
