--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-intersection-observer": "^9.4.0",
+    "react-moment": "^1.1.2",
     "react-native-virtual-keyboard": "^1.2.1",
     "react-phone-number-input": "^3.2.3",
     "react-redux": "^8.0.2",
