--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "nodemon": "^2.0.19"
   },
   "dependencies": {
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.8.1",
     "mongoose": "^6.5.2",
     "mongoose-dbref": "^0.0.4",
