--- a/client/package.json
+++ b/client/package.json
@@ -33,6 +33,7 @@
     "redux": "^4.2.0",
     "redux-dynamic-modules": "^5.2.3",
     "socket.io-client": "^4.5.2",
+    "style-loader": "^3.3.1",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4",
     "zip-array": "^1.0.1"
@@ -66,6 +67,7 @@
     "@babel/plugin-transform-object-assign": "^7.18.6",
     "@babel/preset-env": "^7.18.10",
     "babel-loader": "^8.2.5",
+    "css-loader": "^6.7.1",
     "serve": "^14.0.1",
     "typescript": "^4.7.4",
     "webpack": "^5.74.0",
