--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,6 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "comlink": "^4.3.1",
     "date-fns": "^2.28.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
@@ -23,26 +22,20 @@
     "react-icons": "^4.4.0",
     "react-intersection-observer": "^9.4.0",
     "react-moment": "^1.1.2",
-    "react-native-virtual-keyboard": "^1.2.1",
-    "react-phone-number-input": "^3.2.3",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-spring": "^9.4.5",
     "react-use-measure": "^2.1.1",
     "redux": "^4.2.0",
-    "redux-dynamic-modules": "^5.2.3",
     "socket.io-client": "^4.5.2",
     "style-loader": "^3.3.1",
     "styled-components": "^5.3.5",
-    "web-vitals": "^2.1.4",
     "zip-array": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "build": "react-scripts build"
   },
   "eslintConfig": {
     "extends": [
