--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "fullstackchatapp",
   "version": "1.0.0",
-  "description": "A web chat app for mobile devices based on a node.js server with an interface created by react.js.",
+  "description": "Mobile-first web chat app based on a node.js server with an interface created by react.js.",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "prod": "node server/app.js",
     "dev": "concurrently \"npm start --prefix client\" \"nodemon server/app.js\""
   },
   "author": "Vladimir Storozhilov",
@@ -18,9 +18,6 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.8.1",
     "mongoose": "^6.5.2",
-    "mongoose-dbref": "^0.0.4",
-    "run-rs": "^0.7.7",
-    "socket.io": "^4.5.1",
-    "standard": "^17.0.0"
+    "socket.io": "^4.5.1"
   }
 }
